RESOLVED FIXED42446
gradientTransform + objectBoundingBox is wrong
https://bugs.webkit.org/show_bug.cgi?id=42446
Summary gradientTransform + objectBoundingBox is wrong
Nikolas Zimmermann
Reported 2010-07-16 04:29:10 PDT
We're applying the gradientTransform / objectBoundingBox transformation in the wrong order. Was covered by svg/dynamic-updates tests before the pixel test dump support was broken...
Attachments
Patch (637.99 KB, patch)
2010-07-16 04:33 PDT, Nikolas Zimmermann
krit: review+
Nikolas Zimmermann
Comment 1 2010-07-16 04:33:01 PDT
Dirk Schulze
Comment 2 2010-07-16 04:34:52 PDT
Comment on attachment 61794 [details] Patch LGTM. r=me.
Nikolas Zimmermann
Comment 3 2010-07-16 04:39:52 PDT
Landed in r63542.
Note You need to log in before you can comment on or make changes to this bug.